--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 <body>
 
-<style>
-
-
-</style>
+<div id="styles"></div>
 
 <div class="container">
-  <span class="up-one">+1</span>
   <div class="grid">
     <div id="item-1" class="item item-1">
       <span>1</span>
@@ -46,9 +42,11 @@
     </div>
     <div id="item-10" class="item item-10">
       <span>10</span>
+
     </div>
     <div id="item-11" class="item item-11">
       <span>11</span>
+
     </div>
     <div id="item-12" class="item item-12">
       <span>12</span>
@@ -79,29 +77,41 @@
     </div>
     <div id="item-21" class="item item-21">
       <span>21</span>
+
     </div>
     <div id="item-22" class="item item-22">
       <span>22</span>
+
     </div>
     <div id="item-23" class="item item-23">
       <span>23</span>
+
     </div>
     <div id="item-24" class="item item-24">
       <span>24</span>
+
     </div>
     <div id="item-25" class="item item-25">
       <span>25</span>
+
     </div>
     <div id="item-26" class="item item-26">
       <span>26</span>
+
     </div>
     <div id="item-27" class="item item-27">
       <span>27</span>
+
     </div>
     <div id="item-28" class="item item-28">
       <span>28</span>
+
     </div>
-    <div id="liometro" class="item item-29">🌡</div>
+    <div id="liometer" class="item item-29">
+      <div class="parent">
+        <progress id="liometer-bar" max="5" value="0"></progress>
+      </div>
+    </div>
   </div>
 </div>
 
