--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>LBU</title>
+  <title>🦄🎂🍰</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -42,11 +42,9 @@
     </div>
     <div id="item-10" class="item item-10">
       <span>10</span>
-
     </div>
     <div id="item-11" class="item item-11">
       <span>11</span>
-
     </div>
     <div id="item-12" class="item item-12">
       <span>12</span>
@@ -77,35 +75,27 @@
     </div>
     <div id="item-21" class="item item-21">
       <span>21</span>
-
     </div>
     <div id="item-22" class="item item-22">
       <span>22</span>
-
     </div>
     <div id="item-23" class="item item-23">
       <span>23</span>
-
     </div>
     <div id="item-24" class="item item-24">
       <span>24</span>
-
     </div>
     <div id="item-25" class="item item-25">
       <span>25</span>
-
     </div>
     <div id="item-26" class="item item-26">
       <span>26</span>
-
     </div>
     <div id="item-27" class="item item-27">
       <span>27</span>
-
     </div>
     <div id="item-28" class="item item-28">
       <span>28</span>
-
     </div>
     <div id="liometer" class="item item-29">
       <div class="parent">
