--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div id="liometer" class="item item-29">
       <div class="parent">
-        <progress id="liometer-bar" max="5" value="4"></progress>
+        <div id="bar"></div>
       </div>
     </div>
   </div>
