--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div id="liometer" class="item item-29">
       <div class="parent">
-        <div id="bar"></div>
+        <div id="bar" class="hidden"></div>
       </div>
     </div>
   </div>
