--- a/_video.html
+++ b/_video.html
@@ -5,6 +5,8 @@
   <title>🦄🎂🍰</title>
 </head>
 <body>
-<a href="_game.html">Jugar</a>
+<div class="video">
+  <h1>video</h1>
+</div>
 </body>
 </html>
